# block6-idnet

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
space/: README.md  requirements.txt
space/inference_app/: app.py
space/mlflow_server/: Dockerfile  README.md  entrypoint.sh  requirements.txt
src/data/: dataset.py
src/models/: config.py  efficientnet.py  evaluate.py  register_model.py  train.py
