[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloc6-idnet"
version = "0.1.0"
description = "Détection de fraude documentaire — EfficientNet-B0 + MLflow + HF Spaces"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]